--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "both": "concurrently \"npm:dev\" \"npm:dev2\"",
     "start": "node Backend/server.js",
-    "dev": "nodemon Backend/server.js"
+    "dev": "nodemon Backend/server.js",
+    "dev2": "cd Frontend && npm run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6"
   },
   "devDependencies": {
+    "concurrently": "^7.2.1",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.16"
   }
