--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:5000/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,6 +20,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
     "vite": "^2.9.9"
   }
 }
