--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
