--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "react-spinners": "^0.12.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
