--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "both": "concurrently \"npm:dev\" \"npm:dev2\"",
     "start": "node Backend/server.js",
     "dev": "nodemon Backend/server.js",
-    "dev2": "cd Frontend && npm run dev"
+    "dev2": "cd Frontend && npm run dev",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [],
   "author": "",
