--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.1.2",
     "vite": "^2.9.9"
   }
