--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "mongoose-plugin-autoinc": "^1.1.9"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
