--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
+  "name": "e-bank-frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
