--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
-    "axios": "^0.27.2",
+    "axios": "^1.13.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
@@ -20,8 +20,7 @@
     "react-spinners": "^0.12.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
-    "redux-thunk": "^2.4.1",
-    "vite-plugin-svgr": "^2.2.1"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -31,6 +30,7 @@
     "postcss": "^8.4.14",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.1.2",
-    "vite": "^2.9.9"
+    "vite": "^6.4.1",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
